# daily-ml

./: README.md  main.py  pyproject.toml
clustering/: .gitignore  README.md  clustering_example.py
feature_scaling/: normalization_example.ipynb
gradient_decent/: README.md  batch_gradient_descent_salary_example.py  by_sk_learn.ipynb  main.py  mini_batch.py  mini_batch_gradient_decent.py  pyproject.toml  stochastic_for_diabetes.ipynb  stochastic_gradient_descent_example.py
hello_ml/: README.md  and_gate.py  gates.py  main.py  multi_column_gradient_descent.py  nand_gate.py  xor_gate.py
porn/: main.py
tf-idf/: README.md  ngram_encoding.py  one_hot_encoding.py  one_hot_search.py  tfidf_vectorizer.py
